--- a/fgms_example.conf
+++ b/fgms_example.conf
@@ -7,7 +7,7 @@
 
 ##################################################
 # name of the server, used in chat messages sent by the server
-server.name = change_this
+   server.name = change_this
 
 ##################################################
 # only listen on this address
@@ -15,7 +15,7 @@ server.address = 127.0.0.1
 
 ##################################################
 # listening port
-server.port = 5000
+server.port == 5000
 
 ##################################################
 # port for telnet, default port+1
