--- a/fgms_example.conf
+++ b/fgms_example.conf
@@ -77,12 +77,13 @@ relay.port = 5000
 # these servers will received all locally 
 # received packets without any condition
 # i.e. all packets are mirrored to them
-# crossfeed.host = localhost
-# crossfeed.port = 5002
+ crossfeed.host = localhost
+ crossfeed.port = 5002
 
 ##################################################
 #   List of blacklisted client IPs
 #   set these to block specific client IPs
 blacklist = 123.123.123.123
-blacklist = 12.12.12.12
+  blacklist  12.12.12.12
+    blacklist = = 12.12.12.12 = 
 
