--- a/fgms_example.conf
+++ b/fgms_example.conf
@@ -37,7 +37,7 @@ server.logfile = fgms.log
 # set "server.tracked" = true to use it
 # only set this to true if the tracking server
 # admin allows it!
-server.tracked = false
+server.tracked = true
 server.tracking_server = 62.112.194.20
 server.tracking_port = 8000
 
