--- a/fgms_example.conf
+++ b/fgms_example.conf
@@ -84,6 +84,6 @@ relay.port = 5000
 #   List of blacklisted client IPs
 #   set these to block specific client IPs
 blacklist = 123.123.123.123
-  blacklist  12.12.12.12
-    blacklist = = 12.12.12.12 = 
+  blacklist = 12.12.12.12
+  blacklist =  122.12.12.12 
 
